Removing an event handler should not disturb firing of other event handlers b=174320 based on a patch by Silver r+sr=jst